--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -55,12 +55,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\BeamData.cs" />
     <Compile Include="Columns.cs" />
     <Compile Include="Data\StructuralWallData.cs" />
     <Compile Include="ExportJsonfFile.cs" />
     <Compile Include="Helpers\DoubleExtensions.cs" />
     <Compile Include="Data\Fixity.cs" />
     <Compile Include="Data\PointData .cs" />
+    <Compile Include="JsonHandling\IDataExporter.cs" />
+    <Compile Include="JsonHandling\JsonDataExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Data\ColumnData.cs" />
     <Compile Include="ShearWalls.cs" />
