Update app.addin output copy behavior
Changed the `CopyToOutputDirectory` property for the
`app.addin` file from `Always` to `PreserveNewest` to
optimize build performance by only copying the file
when it is newer than the existing one.

--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -70,7 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.addin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
