--- a/ToEtabs/ToEtabs.csproj
+++ b/ToEtabs/ToEtabs.csproj
@@ -15,10 +15,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="ETABSv1">
-			<HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
-			<Private>False</Private>
-		</Reference>
+	  <Reference Include="ETABSv1">
+	    <HintPath>..\..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 </Project>
