Add ElementsData project for improved data handling
Updated the solution to include a new "ElementsData" project containing data models for beams, columns, and structural walls. Refactored `BeamExtractor`, `ExportJsonfFile`, `Columns`, and `ShearWalls` classes to utilize the new data structures. Introduced utility classes for beam and point handling. Updated project references and paths in `FromRevit.csproj` and `app.addin`. Enhanced error handling in `ShearWalls` and ensured compatibility in `MainWindowViewModel`. Overall, these changes improve code organization and JSON export functionality.

--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -55,27 +55,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beams_Export\BeamExtractor.cs" />
-    <Compile Include="Data\Beam_data\BeamData.cs" />
-    <Compile Include="Columns.cs" />
-    <Compile Include="Data\Beam_data\MaterialData.cs" />
-    <Compile Include="Data\Beam_data\SectionData.cs" />
-    <Compile Include="Data\StructuralWallData.cs" />
-    <Compile Include="Beams_Export\ExportJsonfFile.cs" />
+    <Compile Include="ElementsCommand\Columns.cs" />
+    <Compile Include="ElementsCommand\Beams.cs" />
     <Compile Include="Helpers\DoubleExtensions.cs" />
-    <Compile Include="Data\PointData .cs" />
     <Compile Include="JsonHandling\IDataExporter.cs" />
     <Compile Include="JsonHandling\JsonDataExporter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Data\ColumnData.cs" />
-    <Compile Include="ShearWalls.cs" />
-    <Compile Include="Window.cs" />
+    <Compile Include="ElementsCommand\ShearWalls.cs" />
+    <Compile Include="Utilites\BeamUtilites.cs" />
+    <Compile Include="Utilites\PointUtilites.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.addin">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ElementsData\ElementsData.csproj">
+      <Project>{a392df9f-7518-4421-9081-c704a8691b28}</Project>
+      <Name>ElementsData</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
