--- a/ToEtabs/ToEtabs.csproj
+++ b/ToEtabs/ToEtabs.csproj
@@ -15,6 +15,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ElementsData\ElementsData.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Reference Include="ETABSv1">
 	    <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
 	    <Private>False</Private>
