Enhance data export/import and UI improvements
Updated project references and refactored `ExportData` method in `MainViewViewModel.cs` to improve JSON export functionality. Added checkbox controls in `MainWindow.xaml` for selecting elements to export. Introduced new classes `ImportBeam`, `ImportColumn`, and `ImportWall` for better organization of import logic. Added `CombinedElementsData` class for handling combined JSON data. Overall, these changes enhance application functionality and UI.

--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -20,6 +20,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Reference Include="Microsoft.VisualBasic" />
 	  <Reference Include="RevitAPI">
 	    <HintPath>..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
 	    <Private>False</Private>
