edit slap z value

--- a/ToEtabs/ToEtabs.csproj
+++ b/ToEtabs/ToEtabs.csproj
@@ -22,6 +22,7 @@
 	<ItemGroup>
 	  <Reference Include="ETABSv1">
 	    <HintPath>..\..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	</ItemGroup>
 
