--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -22,11 +22,11 @@
 
 	<ItemGroup>
 	  <Reference Include="RevitAPI">
-	    <HintPath>..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
+	    <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
 	    <Private>False</Private>
 	  </Reference>
 	  <Reference Include="RevitAPIUI">
-	    <HintPath>..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
+	    <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
 	    <Private>False</Private>
 	  </Reference>
 	</ItemGroup>
@@ -49,13 +49,9 @@
 		<ItemGroup>
 			<PluginFiles Include="$(TargetDir)*.*" />
 		</ItemGroup>
-		<Copy SourceFiles="@(PluginFiles)"
-		      DestinationFolder="$(PluginFolder)\%(RecursiveDir)"
-		      SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(PluginFiles)" DestinationFolder="$(PluginFolder)\%(RecursiveDir)" SkipUnchangedFiles="true" />
 
 		<!-- Copy .addin manifest to root Addins folder -->
-		<Copy SourceFiles="FromRevit.addin"
-		      DestinationFolder="$(RevitAddinFolder)"
-		      SkipUnchangedFiles="true" />
+		<Copy SourceFiles="FromRevit.addin" DestinationFolder="$(RevitAddinFolder)" SkipUnchangedFiles="true" />
 	</Target>
 </Project>
