--- a/LoadData/LoadData.csproj
+++ b/LoadData/LoadData.csproj
@@ -46,6 +46,7 @@
     <Compile Include="LoadCombinationFactor.cs" />
     <Compile Include="LoadDefinition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RootObject.cs" />
     <Compile Include="StructuralElement.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
