--- a/GeometryFromEtabs/GeometryFromEtabs.csproj
+++ b/GeometryFromEtabs/GeometryFromEtabs.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="ETABSv1">
       <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
