--- a/StructLink_X.0/StructLink_X.0.csproj
+++ b/StructLink_X.0/StructLink_X.0.csproj
@@ -19,15 +19,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ElementsData\ElementsData.csproj" />
+    <ProjectReference Include="..\Styles\Styles.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
