--- a/StructLink_X.0/StructLink_X.csproj
+++ b/StructLink_X.0/StructLink_X.csproj
@@ -34,7 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="StructLink_X.0.addin">
+    <None Update="StructLink_X.addin">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
