Refactor and enhance Rebar management features
Updated project references, introduced new WPF windows, and implemented various classes for handling rebar data, exporting to Excel and PDF, and visualizing data. Added converters for UI binding, improved ViewModel structure, and enhanced the main application window for better user experience. Included a new icon and updated project files to modern SDK-style format.

--- a/StructLink_X/StructLink_X.csproj
+++ b/StructLink_X/StructLink_X.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
-    <RootNamespace>StructLink_X._0</RootNamespace>
+    <RootNamespace>StructLink_X</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
 	<LangVersion>latest</LangVersion>
@@ -55,7 +55,7 @@
 		<Copy SourceFiles="@(PluginFiles)" DestinationFolder="$(PluginFolder)\%(RecursiveDir)" SkipUnchangedFiles="true" />
 
 		<!-- Copy .addin manifest to root Addins folder -->
-		<Copy SourceFiles="StructLink_X.0.addin" DestinationFolder="$(RevitAddinFolder)" SkipUnchangedFiles="true" />
+		<Copy SourceFiles="StructLink_X.addin" DestinationFolder="$(RevitAddinFolder)" SkipUnchangedFiles="true" />
 	</Target>
 	
 </Project>
