--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ElementsData\ElementsData.csproj" />
+		<ProjectReference Include="..\LoadDatas\LoadData.csproj" />
 		<ProjectReference Include="..\Styles\Styles.csproj" />
 	</ItemGroup>
 
