--- a/ReinforcementFromEtab/ReinforcementFromEtab.csproj
+++ b/ReinforcementFromEtab/ReinforcementFromEtab.csproj
@@ -17,8 +17,7 @@
 
   <ItemGroup>
     <Reference Include="ETABSv1">
-      <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\..\..\Program Files\ETABS 22\ETABSv1.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
