--- a/ToEtabs/ToEtabs.csproj
+++ b/ToEtabs/ToEtabs.csproj
@@ -22,7 +22,7 @@
 
 	<ItemGroup>
 	  <Reference Include="ETABSv1">
-	    <HintPath>..\..\..\..\..\..\..\Program Files\ETABS 22\ETABSv1.dll</HintPath>
+	    <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 21\ETABSv1.dll</HintPath>
 	    <Private>False</Private>
 	  </Reference>
 	</ItemGroup>
