Add wall processing features and UI updates
- Updated `ExportJsonFileFromRevit.csproj` to include `Microsoft.Extensions.DependencyInjection` package.
- Changed `StructWalls` in `JsonStructure.cs` to a `List<WallRCData>`.
- Added `ProcessWalls` method in `IRevitService.cs` for wall data processing.
- Implemented `ProcessWalls` in `RevitService.cs` and enhanced comments for clarity.
- Introduced `ImportWalls` command in `MainViewModel.cs` for importing wall data.
- Modified `MainWindow.xaml` for improved layout and added wall import button.
- Updated project files to correct `ETABSv1.dll` reference paths.
- Added `WallRCData` and `ExistingWallInfo` classes for structured wall data handling.
- Commented out `BeamService` and `ColumnService` classes, indicating potential refactoring.
- Implemented `WallService` to manage wall creation and conflict resolution in Revit.

--- a/ReinforcementFromEtab/ReinforcementFromEtab.csproj
+++ b/ReinforcementFromEtab/ReinforcementFromEtab.csproj
@@ -17,7 +17,8 @@
 
   <ItemGroup>
     <Reference Include="ETABSv1">
-      <HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 21\ETABSv1.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
