Add ETABS export button and update resource handling
Updated `ExternalApplication.cs` to include additional namespaces and a new `PushImage` method for loading images from embedded resources. Created a button for exporting to ETABS with proper error handling and corrected the image resource path from "concerteBuilding.png" to "concreteBuilding.png".

Modified `FromRevit.csproj` to embed the image resource instead of removing it. Updated `ReinforcementFromEtab.csproj` and `ToEtabs.csproj` to reference the ETABS 22 DLL, ensuring compatibility with the latest version of the software.

--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -11,6 +11,10 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'" />
 
 	<ItemGroup>
+	  <None Remove="Resources\Icons\concerteBuilding.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
@@ -35,6 +39,10 @@
 		<None Update="FromRevit.addin">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Include="Resources\Icons\concerteBuilding.png">
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<PropertyGroup>
