Fix namespaces and update ETABS reference paths
- Corrected namespace and class name in Auto_Sheets.addin and ExtrnalApp.cs.
- Enhanced error handling during ribbon creation in ExtrnalApp.cs.
- Updated comment in AddinApplication.cs for clarity.
- Adjusted ETABS reference paths in ReinforcementFromEtab.csproj and ToEtabs.csproj.

--- a/ToEtabs/ToEtabs.csproj
+++ b/ToEtabs/ToEtabs.csproj
@@ -22,8 +22,8 @@
 
 	<ItemGroup>
 	  <Reference Include="ETABSv1">
-		  <HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
-		  <Private>False</Private>
+	    <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 21\ETABSv1.dll</HintPath>
+	    <Private>False</Private>
 	  </Reference>
 	</ItemGroup>
 
