Update project files and improve UI elements
- Refactored `Auto_Sheets.csproj` to include `SheetIcon.png` as a Resource and added `Nice3point.Revit.Extensions` package.
- Consolidated `using` directives in `MultiSelectBehavior.cs`.
- Enhanced `ExternalApp.cs` and `AddinApplication.cs` for better ribbon panel and button creation.
- Deleted `SheetIcon.ico` and modified `SheetIcon.png`.
- Simplified `configration.iss` by removing unnecessary lines.
- Updated `FromRevit.csproj` to change icon inclusion method.
- Adjusted `MainView.xaml` to center the window on startup.
- Improved icon loading logic in `StructLinkXApplication.cs`.
- Upgraded `ETABSv1` reference in `ToEtabs.csproj` to version 22.

--- a/Auto_Sheets/Auto_Sheets.csproj
+++ b/Auto_Sheets/Auto_Sheets.csproj
@@ -8,10 +8,19 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <None Remove="Resources\SheetIcon.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Resource Include="Resources\SheetIcon.png" />
+	</ItemGroup>
+
 
 	<ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="Nice3point.Revit.Extensions" Version="2024.2.1" />
   </ItemGroup>
 
   <ItemGroup>
