--- a/ExportJsonFileFromRevit/ExportJsonFileFromRevit.csproj
+++ b/ExportJsonFileFromRevit/ExportJsonFileFromRevit.csproj
@@ -13,6 +13,7 @@
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Nice3point.Revit.Extensions" Version="2024.2.1" />
 	</ItemGroup>
 
 	<ItemGroup>
