--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -17,6 +17,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Nice3point.Revit.Extensions" Version="2024.2.1" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -41,8 +42,8 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-	  <EmbeddedResource Include="Resources\Icons\concerteBuilding.png">
-	  </EmbeddedResource>
+	  <Resource Include="Resources\Icons\concerteBuilding.png">
+	  </Resource>
 	</ItemGroup>
 
 	<PropertyGroup>
