--- a/StructLink_X/StructLink_X.csproj
+++ b/StructLink_X/StructLink_X.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="HelixToolkit.Wpf" Version="2.27.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Nice3point.Revit.Extensions" Version="2024.2.1" />
   </ItemGroup>
 
   <ItemGroup>
