--- a/Auto_Sheets/Auto_Sheets.csproj
+++ b/Auto_Sheets/Auto_Sheets.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="Microsoft.Xaml.Behaviors">
+      <HintPath>..\..\..\..\Desktop\Auto_Sheets\Auto_Sheets\bin\Release\Microsoft.Xaml.Behaviors.dll</HintPath>
+    </Reference>
     <Reference Include="RevitAPI">
       <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
       <Private>False</Private>
