Update UI elements and add ETABS export functionality
- Changed panel names in multiple files for clarity.
- Added new project "EtabsGempetryExport" to the solution.
- Updated project files to manage resources and dependencies.
- Removed commented-out code in `BeamService.cs` and `ColumnService.cs`.
- Modified `MainWindow.xaml` layout and dimensions.
- Introduced new helper classes for ETABS data management.
- Created `FileService.cs` and `IFileService.cs` for file operations.
- Updated `MainViewModel.cs` to manage structural data extraction.
- Added new image resources for UI.

--- a/ExportJsonFileFromRevit/ExportJsonFileFromRevit.csproj
+++ b/ExportJsonFileFromRevit/ExportJsonFileFromRevit.csproj
@@ -8,6 +8,10 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <None Remove="Resources\import.png" />
+	</ItemGroup>
+
 
 	<ItemGroup>
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
@@ -52,6 +56,10 @@
 		<!-- Copy .addin manifest to root Addins folder -->
 		<Copy SourceFiles="ExportJsonFileFromRevit.addin" DestinationFolder="$(RevitAddinFolder)" SkipUnchangedFiles="true" />
 	</Target>
+
+	<ItemGroup>
+	  <Resource Include="Resources\import.png" />
+	</ItemGroup>
 
 	<ItemGroup>
 	  <None Update="ExportJsonFileFromRevit.addin">
