--- a/EtabsGempetryExport/EtabsGempetryExport.csproj
+++ b/EtabsGempetryExport/EtabsGempetryExport.csproj
@@ -23,6 +23,7 @@
       <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 21\ETABSv1.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
 
 </Project>
