Update resources and improve error handling in plugins
- Replaced `SheetIcon.png` with `resources\SheetIcon.png` in `Auto_Sheets.csproj`.
- Enhanced error handling and user notifications in `cPlugin.cs` for ETABS model extraction.
- Updated `Info` method in `cPlugin.cs` to include version and contact details.
- Modified `CleanUp` method in `cPlugin.cs` to release COM objects and prevent memory leaks.
- Clarified `GetActiveETABSInstance` method in `ETABSHelper.cs` by removing comments.
- Improved exception handling in `ETABSService.cs` for model connection and data extraction.
- Enhanced error handling in `FileService.cs` during file saving operations.
- Commented out constructor in `MainViewModel.cs`, indicating potential refactor.
- Updated resource references in `ExportJsonFileFromRevit.csproj` and `StructLink_X.csproj`.
- Changed icon resource in `AddinApplication.cs` to reflect new image files.
- Deleted old image files and added new ones for visual updates.

--- a/Auto_Sheets/Auto_Sheets.csproj
+++ b/Auto_Sheets/Auto_Sheets.csproj
@@ -9,11 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="Resources\SheetIcon.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Resource Include="Resources\SheetIcon.png" />
+	  <None Remove="resources\SheetIcon.png" />
 	</ItemGroup>
 
 
@@ -55,6 +51,10 @@
 		<!-- Copy .addin manifest to root Addins folder -->
 		<Copy SourceFiles="Auto_Sheets.addin" DestinationFolder="$(RevitAddinFolder)" SkipUnchangedFiles="true" />
 	</Target>
+
+	<ItemGroup>
+	  <Resource Include="resources\SheetIcon.png" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<None Update="Auto_Sheets.addin">
