--- a/Auto_Sheets/Auto_Sheets.csproj
+++ b/Auto_Sheets/Auto_Sheets.csproj
@@ -24,12 +24,10 @@
       <HintPath>..\..\..\..\Desktop\Auto_Sheets\Auto_Sheets\bin\Release\Microsoft.Xaml.Behaviors.dll</HintPath>
     </Reference>
     <Reference Include="RevitAPI">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPI.dll</HintPath>
     </Reference>
     <Reference Include="RevitAPIUI">
-      <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Autodesk\Revit 2022\RevitAPIUI.dll</HintPath>
     </Reference>
   </ItemGroup>
 	<PropertyGroup>
