- Refactored PDF report summarization for columns and beams. - Introduced validation methods for column and beam data. - Added helper methods for streamlined PDF generation. - Marked ETABSv1.dll as private in ToEtabs.csproj.

--- a/LoadDatas/LoadData.csproj
+++ b/LoadDatas/LoadData.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ETABSv1">
-      <HintPath>..\..\..\..\..\..\..\Program Files\ETABS 22\ETABSv1.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -56,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\..\..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
