--- a/FromRevit/FromRevit.csproj
+++ b/FromRevit/FromRevit.csproj
@@ -22,7 +22,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\ElementsData\ElementsData.csproj" />
-		<ProjectReference Include="..\LoadDatas\LoadData.csproj" />
+		<ProjectReference Include="..\LoadData\LoadData.csproj" />
 		<ProjectReference Include="..\Styles\Styles.csproj" />
 	</ItemGroup>
 
