Rename project and update namespaces to EtabsGeometryExport
- Updated `Auto_Sheets.csproj` to change resource path and project reference name.
- Rewrote `EtabsGempetryExport.csproj` with new structure, targeting .NET 4.8, and added necessary package references.
- Changed namespaces in `MainWindow.xaml`, `MainWindow.xaml.cs`, `cPlugin.cs`, `ETABSStructuralData.cs`, and several helper/service files to `EtabsGeometryExport`.
- Adjusted using directives across all modified files to reflect the new namespaces.

--- a/Auto_Sheets/Auto_Sheets.csproj
+++ b/Auto_Sheets/Auto_Sheets.csproj
@@ -43,7 +43,7 @@
 	</Target>
 
 	<ItemGroup>
-	  <Resource Include="resources\SheetIcon.png" />
+	  <Resource Include="Resources\SheetIcon.png" />
 	</ItemGroup>
 
 	<ItemGroup>
