--- a/EtabsGempetryExport/EtabsGeometryExport.csproj
+++ b/EtabsGempetryExport/EtabsGeometryExport.csproj
@@ -21,8 +21,7 @@
 
   <ItemGroup>
     <Reference Include="ETABSv1">
-      <HintPath>..\..\..\..\..\..\Program Files\ETABS 22\ETABSv1.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
