--- a/LoadData/LoadData.csproj
+++ b/LoadData/LoadData.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>net48</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-<LangVersion>latest</LangVersion>
-		<ImplicitUsings>enable</ImplicitUsings>	  <LangVersion>latest</LangVersion>
+    <LangVersion>latest</LangVersion>
+	<ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>latest</LangVersion>
 	  
   </PropertyGroup>
 
@@ -15,8 +16,7 @@
 
   <ItemGroup>
     <Reference Include="ETABSv1">
-      <HintPath>..\..\..\..\..\..\Program Files\ETABS 22\ETABSv1.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
     </Reference>
   </ItemGroup>
 
