--- a/LoadData/LoadData.csproj
+++ b/LoadData/LoadData.csproj
@@ -23,7 +23,7 @@
 	<ItemGroup>
 		<Reference Include="ETABSv1">
 			<HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
-			<Private>True</Private>
+			<Private>False</Private>
 		</Reference>
 	</ItemGroup>
 
