--- a/ReinforcementFromEtab/ReinforcementFromEtab.csproj
+++ b/ReinforcementFromEtab/ReinforcementFromEtab.csproj
@@ -27,7 +27,7 @@
 	<ItemGroup>
 		<Reference Include="ETABSv1">
 			<HintPath>..\..\..\..\Program Files\Computers and Structures\ETABS 22\ETABSv1.dll</HintPath>
-			<Private>True</Private>
+			<Private>False</Private>
 		</Reference>
 		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
